# ormica

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  colony-proposal.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
docs/: README.md  concepts.md  getting-started.md  onboarding.md
docs/architecture/: 01-hierarchy.md  02-signaling.md  03-brain.md  04-governance.md  05-observability.md  06-colony.md  07-runtime.md  08-facade.md  README.md
docs/guides/: async-and-routing.md  dashboard.md  human-approvals.md  llm-providers.md  persistence.md  reading-the-thought-trail.md  writing-a-colony.md  writing-a-constitution.md  writing-tools.md  your-first-pr.md
docs/guides/integrations/: email.md  ollama-local.md  slack.md
docs/reference/: cli.md  ormica-yaml.md
examples/: emergent_swarm.py  human_approval.py
examples/colonies/: agency.yaml  creator-studio.yaml  ecommerce-store.yaml  restaurant-group.yaml  saas-startup.yaml
examples/saas_helpdesk/: README.md  colony.yaml  ormica.yaml  run.py  tools.py
examples/solo_founder/: README.md
ormica/: __init__.py  agent.py  core.py  runtime.py
ormica/arbor/: __init__.py  branch.py  exceptions.py  node.py  policy.py  tree.py
ormica/brain/: __init__.py  claude.py  gemini.py  gpt.py  mock.py  protocol.py  providers.py  router.py  tool.py  types.py  universal.py
ormica/canopy/: __init__.py  approver.py  policy.py  risk.py
ormica/cli/: __init__.py  config.py  main.py
ormica/colony/: __init__.py  base.py  registry.py  yaml_loader.py
ormica/colony/business/: __init__.py
ormica/colony/supply_chain/: __init__.py
ormica/config/: .env.example
ormica/cortex/: __init__.py  constitution.py  loader.py  policy.py  rule.py  rules.py
ormica/cortex/packs/: __init__.py  compact-output.yaml  credential-leak-guard.yaml  ftc-endorsement.yaml  health-claims.yaml
ormica/dashboard/: __init__.py  observer.py  server.py  templates.py
ormica/mycelium/: __init__.py  backend.py  entry.py  file_backend.py  mycelium.py  sqlite_backend.py
ormica/observe/: __init__.py  bus.py  event.py  export.py  observer.py  trace.py
ormica/stigma/: __init__.py  emit_tool.py  signal.py  stigma.py
tests/: test_agent.py  test_agent_sensing.py  test_arbor.py  test_async_brain.py  test_async_runtime.py  test_brain.py  test_canopy.py  test_claude_brain.py  test_cli.py  test_colony.py  test_concrete_colonies.py  test_cortex.py  test_cortex_loader.py  test_cortex_packs.py  test_cortex_per_node_rules.py  test_cortex_rules.py  test_dashboard.py  test_emit_tool.py  test_emits.py  test_evaporate.py  test_example_emergent_swarm.py  test_example_human_approval.py  test_example_saas_helpdesk.py  test_file_backend.py  test_gemini_brain.py  test_gpt_brain.py  test_mycelium.py  test_observe.py  test_observe_export.py  test_onboarding_rules.py  test_ormica.py  test_package.py  test_provider_helpers.py  test_runtime.py  test_soft_severity.py  test_sqlite_backend.py  test_stigma.py  test_tools.py  test_trace.py  test_universal_brain.py  (+1 more)
