[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ormica"
version = "0.1.1"
description = "An Autonomous Coordination Engine — build self-organizing AI agent colonies inspired by ant-colony stigmergy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ranzim", email = "ranzimthekare123@gmail.com" }]
maintainers = [{ name = "Ranzim", email = "ranzimthekare123@gmail.com" }]
keywords = [
    "ai",
    "agents",
    "agentic",
    "multi-agent",
    "multi-agent-framework",
    "ant-colony",
    "stigmergy",
    "swarm-intelligence",
    "distributed-systems",
    "self-organization",
    "emergence",
    "cybernetics",
    "autonomous-agents",
    "llm",
    "automation",
    "framework",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
gemini = ["google-generativeai>=0.8"]
# UniversalBrain (Ollama, OpenRouter, Groq, Together, DeepSeek, …) uses the
# openai SDK under the hood, so installing [openai] is what you need for
# every OpenAI-compatible provider — including local LLMs via Ollama.
universal = ["openai>=1.0"]
memory = ["chromadb>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "build>=1.0",
    "twine>=5.0",
]
all = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-generativeai>=0.8",
    "chromadb>=0.5",
]

[project.urls]
Homepage = "https://github.com/Ranzim/ormica"
Repository = "https://github.com/Ranzim/ormica"
Documentation = "https://github.com/Ranzim/ormica/tree/master/docs"
Issues = "https://github.com/Ranzim/ormica/issues"
Discussions = "https://github.com/Ranzim/ormica/discussions"
Changelog = "https://github.com/Ranzim/ormica/blob/master/CHANGELOG.md"

[project.scripts]
ormica = "ormica.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ormica*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
ormica = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
